# cmd_todo

./: Cargo.toml
db/: errands.json  general.json
src/: cli.rs  lib.rs  main.rs  models.rs  storage.rs  todo.rs
src/cli/: args.rs  mod.rs
src/export/: mod.rs
src/storage/: mod.rs
src/todo/: mod.rs  model.rs
