[package]
name = "cmd_todo"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
crossterm = "=0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
[dependencies.uuid]
version = "1.16.0"
# Lets you generate random UUIDs
features = ["v4"]
